# CinderVM

./: .gitignore  Cargo.toml  README.md
examples/: arithmetic.cinder  factorial.cinder  simple.cinder
src/: bytecode.rs  cli.rs  interpreter.rs  main.rs  parser.rs  sandbox.rs
src/jit/: codegen.rs  memory.rs  mod.rs
